---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2020.08.XX
  Changes:
    - Improved clarity of tier labels at 16px; removed tier labels for 6th tier
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2020.08.24
  Changes:
    - Reverted `icon_size` and `icon_mipmaps` are now set to `nil` when `icons` is defined
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2020.08.24
  Features:
    - Added localization support for German
  Changes:
    - Added functionality to `create_icons_from_list` to be able to specify belt-type masks
    - Adjusted bright spot in oil refinery highlight
    - Added Bob's Assembling Machines and Angel's Petrochem as hidden dependencies to fix Oil Refinery reskinning issues
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2020.08.15
  Features:
    - Added function `rescale_minimachine_technology`
  Changes:
    - `icon_size` and `icon_mipmaps` are now set to `nil` when `icons` is defined, and they are defined per-entry within `icons`
  Bugfixes:
    - Fixed that `tint_index` could not be defined under some edge cases
---------------------------------------------------------------------------------------------------
Version: 0.0.15
Date: 2020.08.11
  Changes:
    - Updated thumbnail
  Bugfixes:
    - Fixed startup error when starting without any of Bob's mods; calling a function that hadn't been defined yet
---------------------------------------------------------------------------------------------------
Version: 0.0.14
Date: 2020.08.07
  Features:
    - Added functions `assign_deferred_icons`, `rescale_minimachine`
  Changes:
    - Moved sprites, icons and code for oil refineries into this mod
    - Revised icon assignment to optionally define `pictures`