@@ -8,6 +8,7 @@ reskins-library=Contains functions, sprites, and icons required by all Artisanal
 reskins-lib-icon-tier-labeling=Icon tier labeling
 reskins-lib-icon-tier-labeling-style=Icon tier labeling style
 reskins-lib-tier-mapping=Tier mapping
+reskins-lib-blend-mode=Color intensity
 reskins-lib-customize-tier-colors=Enable custom coloring
 reskins-lib-custom-colors-tier-0=Color: Tier 0
 reskins-lib-custom-colors-tier-1=Color: Tier 1
@@ -21,6 +22,7 @@ reskins-lib-custom-colors-tier-6=Color: Tier 6
 reskins-lib-icon-tier-labeling=Icons will display colored bars to indicate tier.\n\n[color=#9cdcfe]Default[/color]: [color=green]Enabled[/color]
 reskins-lib-icon-tier-labeling-style=Choose the style of tier label.\n\n[color=#9cdcfe]Default: [img=item.reskins-lib-rounded-rectangle-tier-label]Rounded Rectangles[/color]
 reskins-lib-tier-mapping=Choose between the following tier mappings.\n\n[font=default-semibold]Name[/font]: the first tier of any series is always [color=#de9400][font=default-bold]tier 1[/font][/color].\n[font=default-semibold]Progression[/font]: the tier of each entry in a series is based on the ingredients and technology level.\n\nFor example:\nUnder [font=default-semibold]Name[/font] mapping, the first Oil Refinery is [color=#de9400][font=default-bold]tier 1[/font][/color].\nUnder [font=default-semibold]Progression[/font] mapping, the first Oil Refinery is [color=#c20600][font=default-bold]tier 2[/font][/color].\n\n[color=#9cdcfe]Default: Progression[/color]
+reskins-lib-blend-mode=Choose how intensely the color appears for entities in-world. More technically, adjusts how the highlights layer blends with the color mask.\n\n[font=default-semibold]Vibrant[/font]: an intense, bright appearance.\n[font=default-semibold]Soft[/font]: a gentle, dimmer appearance.\n\n[color=#9cdcfe]Default: Vibrant[/color]
 reskins-lib-customize-tier-colors=Enable customization of tier colors through hexidecimal color values. Supports hex codes in the following form: 'rrggbb', 'rgb', 'rrggbbaa', 'rgba', 'ww', and 'w'.\n\n[color=#9cdcfe]Default[/color]: [color=red]Disabled[/color]
 reskins-lib-custom-colors-tier-0=Choose color for Tier 0.\n\n[color=#9cdcfe]Default[/color]: [color=#4d4d4d][font=default-bold]4d4d4d[/font][/color]
 reskins-lib-custom-colors-tier-1=Choose color for Tier 1.\n\n[color=#9cdcfe]Default[/color]: [color=#de9400][font=default-bold]de9400[/font][/color]
@@ -33,6 +35,8 @@ reskins-lib-custom-colors-tier-6=Choose color for Tier 6.\n\n[color=#9cdcfe]Defa
 [string-mod-setting]
 reskins-lib-tier-mapping-progression-map=Progression
 reskins-lib-tier-mapping-name-map=Name
+reskins-lib-blend-mode-additive=Vibrant
+reskins-lib-blend-mode-additive-soft=Soft
 reskins-lib-icon-tier-labeling-style-dots=[img=reskins-lib-dots-tier-label]Dots
 reskins-lib-icon-tier-labeling-style-half-circle=[img=reskins-lib-half-circle-tier-label]Half-circles
 reskins-lib-icon-tier-labeling-style-rectangle=[img=reskins-lib-rectangle-tier-label]Rectangles
