@@ -339,7 +339,7 @@ function reskins.lib.store_icons(name, inputs, storage)
     elseif inputs.defer_to_data_updates then
         data_stage = "data-updates"
     else
-        log(name.." was improperly stored for deferred icon assignment.")
+        log("[Reskins] "..name.." was improperly stored for deferred icon assignment.")
         return -- Fail quietly; should never get here
     end
 
