@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.4
 Date: 2020.08.XX
+  Features:
+    - Added setting 'Color intensity' allowing customization of highlight blend-mode property
   Changes:
     - Improved clarity of tier labels at 16px; removed tier labels for 6th tier
 ---------------------------------------------------------------------------------------------------
